# nexsys-rs

./: .gitignore  Cargo.toml  README.md  build.sh  demo.nxs  demo.py  my_sys.txt  pyproject.toml  test_cli.sh
nexsys-core/: Cargo.toml  README.md
nexsys-core/src/: algos.rs  block_mgr.rs  equation.rs  lib.rs  python_ffi.rs  re.rs
nexsys-math/: Cargo.toml  README.md
nexsys-math/src/: lib.rs  linalg.rs  mvcalc.rs  nxn.rs
nexsys-tests/: Cargo.toml
nexsys-tests/src/: lib.rs  math.rs  solver.rs  tools.rs
scripts/: build.ps1  qs.ps1  test_cli.ps1
src/: c_ffi.rs  errors.rs  lib.rs  main.rs  parsing.rs  python_ffi.rs  solver.rs
src/algos/: mod.rs  structs.rs
src/mvcalc/: mod.rs  nxn.rs
src/parsing/: conditionals.rs  duplicate.rs  mod.rs
src/units/: consts.json  mod.rs  units.json
tests/: math.rs  parsers.rs  solver.rs  tools.rs
