[package]
name = "nexsys"
description = "Solve nonlinear systems of equations using Newton's method."
version = "0.0.2"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "solver"
path = "tests/solver.rs"

[[test]]
name = "math"
path = "tests/math.rs"

[[test]]
name = "parsers"
path = "tests/parsers.rs"

[features]
python_ffi = ["pyo3"]
default = ["python_ffi"]

[[bin]]
name = "nxc"
path = "src/main.rs"

[lib]
name = "nexsys"
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
meval = "0.2.0"
pyo3 = { version = "0.18.0", features = ["extension-module", "generate-import-lib"], optional = true }
regex = "1.7.0"
serde_json = "1.0.89"