[package]
name = "nexsys-core"
description = "Solve nonlinear systems of equations using Newton's method."
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["python_ffi"]
python_ffi = ["pyo3"]

[lib]
crate-type = ["rlib", "cdylib"]
name = "nexsys_core"

[dependencies]
lazy_static = "1.4.0"
meval = "0.2.0"
nexsys-math = { path = "../nexsys-math", version = "0.0.1" }
regex = "1.7.0"
pyo3 = { version = "0.17.3", features = ["extension-module"], optional = true }