[package]
name = "nexsys-math"
description = "Solve nonlinear systems of equations using Newton's method."
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meval = "0.1.0"